# CareOSML

./: .gitignore  README.md  claude.md  main.py  mycode.ipynb  pyproject.toml
docs/: CareOS-ML-Overview.md  README.md  progress.md  status.md  tasks.md
sandbox/: assessment_semi_supervised_bayesian_ensemble.md  benefits_perimenopause_detection_investors.md  benefits_perimenopause_detection_investors_revised.md  careOsML_stratification.py
src/careosml/: __init__.py
