[project]
name = "careosml"
version = "0.1.0"
description = "Machine learning tools and models for healthcare applications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=0.23.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pymc",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.uv]
project-environment = "careOsMLenv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
